# routeros_batch

./: .gitignore  DEVELOPING.md  README.md  ansible.cfg  devfile.yaml  release.sh  requirements.txt  requirements.yml  test.sh
.devcontainer/: README.md  devcontainer.json  pyproject.toml
.devcontainer/docker/: build-and-publish.sh
.devcontainer/pull/: devcontainer.json
ansible_collections/: .gitignore
ansible_collections/shuawest/routeros_batch/: README.md  galaxy.yml  requirements.txt
ansible_collections/shuawest/routeros_batch/plugins/action/: facts.py  script.py  scriptgen.py
ansible_collections/shuawest/routeros_batch/plugins/module_utils/: cmd_spec.py
ansible_collections/shuawest/routeros_batch/plugins/modules/: facts.py  script.py  scriptgen.py
ansible_collections/shuawest/routeros_batch/tests/integration/: requirements.yml
ansible_collections/shuawest/routeros_batch/tests/unit/data/: mtk-base.yaml
ansible_collections/shuawest/routeros_batch/tests/unit/plugins/modules/: utils.py  (+2 more)
etc/: TODO.md  sample-output.json  venv.sh
plugins/action/: facts.py  script.py
plugins/module_utils/: ros_paths.py  routeros_classify_paths.sh  routeros_path_list.txt
plugins/modules/: script.py  scriptgen.py
tests/integration/: .gitignore
tests/integration/targets/facts/tasks/: main.yml
tests/integration/targets/script/tasks/: fail_execution.yml  fail_validation.yml  main.yml  success_commands.yml
tests/integration/targets/scriptgen/files/: int-example.yaml
tests/integration/targets/scriptgen/tasks/: main.yml
tests/unit/data/: commands-simple.yaml
(+10 files in other folders)
