[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]
ansible-core = "^2.9
ansible-test
autopep8 = "^2.0.4"
pylint = "^3.0.2"
pytest = "^7.4.3"
pytest-forked
pytest-coverage
python-dotenv
pytest-xdist
unittest2
ordereddict

[tool.pytest.ini_options]
python_files = "*_tests.py"
testpaths = ["lib", "tests"]

